--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,4 +1,25 @@
 $font-family-sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
 Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
+$body-bg: #E4D6D3;
+$body-color: #311F1F;
+$list-group-bg: scale-color($body-bg, $lightness: 50%);
+$list-group-hover-bg: scale-color($list-group-bg, $lightness: 40%);
+
+$enable-responsive-font-sizes: true;
+
 @import "~bootstrap/scss/bootstrap";
+
+html,
+body,
+#__next {
+  min-height: 100vh;
+}
+
+.result {
+  font-size: $font-size-base * 1.5;
+}
+
+.ratio {
+  font-size: $font-size-base * 8;
+}
