--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -4,6 +4,7 @@ Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 $body-bg: #E4D6D3;
 $body-color: #311F1F;
 $primary: #975957;
+$secondary: scale-color($primary, $lightness: 70%);
 $list-group-bg: scale-color($body-bg, $lightness: 50%);
 $list-group-hover-bg: scale-color($list-group-bg, $lightness: 40%);
 
@@ -22,13 +23,13 @@ body svg {
 }
 
 .result {
-  font-size: $font-size-base * 1.5;
+  @include font-size($font-size-base * 1.5);
 }
 
 .ratio {
-  font-size: $font-size-base * 7;
+  @include font-size($font-size-base * 7);
 }
 
 footer {
-  font-size: $small-font-size
+  @include font-size($small-font-size);
 }
